--- a/index.html
+++ b/index.html
@@ -500,18 +500,20 @@
             transform: scale(0.95);
         }
 
-        /* 第三排键盘布局优化 */
-        .keyboard-row-third {
+        /* 功能行布局优化 */
+        .keyboard-row-function {
             justify-content: center;
+            gap: 8px;
         }
 
-        .keyboard-row-third .keyboard-key {
+        .keyboard-row-function .backspace-key {
             flex: 1;
+            min-width: 80px;
         }
 
-        .keyboard-row-third .backspace-key {
+        .keyboard-row-function .submit-key {
             flex: 2;
-            min-width: 60px;
+            min-width: 160px;
         }
 
         .keyboard-key.function-key {
@@ -581,9 +583,15 @@
                 gap: 4px;
             }
 
-            .keyboard-row-third .backspace-key {
-                flex: 1.5;
-                min-width: 40px;
+            .keyboard-row-function .backspace-key {
+                flex: 1;
+                min-width: 60px;
+                font-size: 1.1em;
+            }
+            
+            .keyboard-row-function .submit-key {
+                flex: 2;
+                min-width: 120px;
                 font-size: 1.1em;
             }
         }
@@ -599,9 +607,15 @@
                 gap: 3px;
             }
 
-            .keyboard-row-third .backspace-key {
-                flex: 1.3;
-                min-width: 35px;
+            .keyboard-row-function .backspace-key {
+                flex: 1;
+                min-width: 50px;
+                font-size: 1em;
+            }
+            
+            .keyboard-row-function .submit-key {
+                flex: 2;
+                min-width: 100px;
                 font-size: 1em;
             }
         }
@@ -2048,7 +2062,7 @@
                          <div class="keyboard-key" data-key="k">k</div>
                          <div class="keyboard-key" data-key="l">l</div>
                      </div>
-                     <div class="keyboard-row keyboard-row-third">
+                     <div class="keyboard-row">
                          <div class="keyboard-key" data-key="z">z</div>
                          <div class="keyboard-key" data-key="x">x</div>
                          <div class="keyboard-key" data-key="c">c</div>
@@ -2056,9 +2070,9 @@
                          <div class="keyboard-key" data-key="b">b</div>
                          <div class="keyboard-key" data-key="n">n</div>
                          <div class="keyboard-key" data-key="m">m</div>
-                         <div class="keyboard-key function-key backspace-key" data-key="backspace">←</div>
                      </div>
-                     <div class="keyboard-row">
+                     <div class="keyboard-row keyboard-row-function">
+                         <div class="keyboard-key function-key backspace-key" data-key="backspace">退格</div>
                          <div class="keyboard-key function-key submit-key" data-key="submit">提交</div>
                      </div>
                  </div>
